Ändern von 'Stream.collect(Collectors.toList())' zu 'Stream.toList()' in der ganzen Klasse DbsMannschaftComponentImpl